# asuka-bot

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  Settings.toml  docker-compose.yml
src/: main.rs
src/commands/: animedex.rs  felizjueves.rs  help.rs  mod.rs  poll.rs  yugi.rs
src/structs/: mal_json.rs  mod.rs  yugi_json.rs
src/system/: console.rs  mod.rs  os.rs  security.rs  settings.rs
