[package]
name = "asuka"
version = "1.4.4"
authors = ["Alex Díaz"]
edition = "2021"

[dependencies]
colored = "3.0.0"
clearscreen = "4.0.2"
log = "0.4.28"
log4rs = "1.4.0"
toml = "0.9.7"
chrono = "0.4.42"
chrono-tz = "0.10.4"
machine-uid = "0.5.3"

sha2 = "0.10.9"
aes-gcm = "0.10.3"
aes = "0.8.4"

serde = { version = "1.0.226", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde_json = "1.0.145"
serenity = "0.12.4"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
